@@ -35,20 +35,22 @@ void u8_to_hex  (const u8  v, u8 hex[2]);
 void u32_to_hex (const u32 v, u8 hex[8]);
 void u64_to_hex (const u64 v, u8 hex[16]);
 
-u8 int_to_base32    (const u8 c);
-u8 base32_to_int    (const u8 c);
-u8 int_to_base64    (const u8 c);
-u8 base64_to_int    (const u8 c);
-u8 int_to_base64url (const u8 c);
-u8 base64url_to_int (const u8 c);
-u8 int_to_itoa32    (const u8 c);
-u8 itoa32_to_int    (const u8 c);
-u8 int_to_itoa64    (const u8 c);
-u8 itoa64_to_int    (const u8 c);
-u8 int_to_bf64      (const u8 c);
-u8 bf64_to_int      (const u8 c);
-u8 int_to_lotus64   (const u8 c);
-u8 lotus64_to_int   (const u8 c);
+u8 int_to_base32            (const u8 c);
+u8 base32_to_int            (const u8 c);
+u8 int_to_base64            (const u8 c);
+u8 base64_to_int            (const u8 c);
+u8 int_to_alternate_base64  (const u8 c);
+u8 alternate_base64_to_int  (const u8 c);
+u8 int_to_base64url         (const u8 c);
+u8 base64url_to_int         (const u8 c);
+u8 int_to_itoa32            (const u8 c);
+u8 itoa32_to_int            (const u8 c);
+u8 int_to_itoa64            (const u8 c);
+u8 itoa64_to_int            (const u8 c);
+u8 int_to_bf64              (const u8 c);
+u8 bf64_to_int              (const u8 c);
+u8 int_to_lotus64           (const u8 c);
+u8 lotus64_to_int           (const u8 c);
 
 size_t base32_decode (u8 (*f) (const u8), const u8 *in_buf, const size_t in_len, u8 *out_buf);
 size_t base32_encode (u8 (*f) (const u8), const u8 *in_buf, const size_t in_len, u8 *out_buf);
